--- a/src/coding4kids/themes/educenter/layouts/partials/footer.html
+++ b/src/coding4kids/themes/educenter/layouts/partials/footer.html
@@ -38,7 +38,7 @@
         </div>
         <!-- company -->
         <div class="col-lg-2 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5 text-uppercase">{{ i18n "company" }}</h4>
+          <h4 class="text-white mb-5 text-uppercase">{{ i18n "organisation" }}</h4>
           <ul class="list-unstyled">
             {{ range site.Menus.main }}
             {{ if not .HasChildren }}
