--- a/src/coding4kids/themes/educenter/layouts/partials/footer.html
+++ b/src/coding4kids/themes/educenter/layouts/partials/footer.html
@@ -47,7 +47,7 @@
             {{ end }}
           </ul>
         </div>
-        <!-- links -->
+        <!-- links 
         <div class="col-lg-2 col-sm-4 col-6 mb-5 mb-md-0">
           <h4 class="text-white mb-5 text-uppercase">{{ i18n "links" }}</h4>
           <ul class="list-unstyled">
@@ -56,7 +56,7 @@
             {{ end }}
           </ul>
         </div>
-        <!-- support -->
+        
         <div class="col-lg-2 col-sm-4 col-6 mb-5 mb-md-0">
           <h4 class="text-white mb-5 text-uppercase">{{ i18n "courses" }}</h4>
           <ul class="list-unstyled">
@@ -65,7 +65,8 @@
             {{ end }}
           </ul>
         </div>
-        <!-- support -->
+      
+        
         <div class="col-lg-2 col-sm-4 col-6 mb-5 mb-md-0">
           <h4 class="text-white mb-5 text-uppercase">{{ i18n "new_notice" }}</h4>
           <ul class="list-unstyled">
@@ -74,6 +75,8 @@
             {{ end }}
           </ul>
         </div>
+
+      -->
       </div>
     </div>
   </div>
