added in the fees and service provider decal

--- a/src/coding4kids/themes/educenter/layouts/course/single.html
+++ b/src/coding4kids/themes/educenter/layouts/course/single.html
@@ -59,6 +59,9 @@
       <div class="col-12 mb-4 content">
         {{ .Content }}
       </div>
+      <div class="row">
+        <img style="" src="/images/creativekids_decal_digital_250.png" alt="creative kids service provider">
+      </div>
       <!-- teacher -->
       {{ if (isset .Params "teacher") }}
         <div class="col-12">
