--- a/src/coding4kids/themes/educenter/layouts/contact/list.html
+++ b/src/coding4kids/themes/educenter/layouts/contact/list.html
@@ -9,35 +9,12 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-7 mb-4 mb-lg-0">
-        <form action="{{ site.Params.contact_form_action | safeURL }}" method="POST">
-          <input type="text" class="form-control mb-3" id="name" name="name" placeholder="Your Name">
-          <input type="email" class="form-control mb-3" id="mail" name="mail" placeholder="Your Email">
-          <input type="text" class="form-control mb-3" id="subject" name="subject" placeholder="Subject">
-          <textarea name="message" id="message" class="form-control mb-3" placeholder="Your Message"></textarea>
-          <button type="submit" value="send" class="btn btn-primary">{{ i18n "send" }}</button>
-        </form>
-      </div>
-      <div class="col-lg-5 content">
-        {{ .Content }}
-        <a href="tel:{{ site.Params.mobile }}" class="text-color h5 d-block">{{ site.Params.mobile }}</a>
-        <a href="mailto:{{ site.Params.email }}" class="mb-5 text-color h5 d-block">{{ site.Params.email }}</a>
-        <p>{{ site.Params.address | markdownify }}</p>
+      <div class="col-12">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdjDaadGNN_-zZIPeJHfn1AL6LCSRJfegSTrnOvMZFmRYaFrg/viewform?embedded=true" width="100%" height="1400px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </div>
   </div>
 </section>
 <!-- /contact -->
-
-<!-- gmap -->
-<section class="section pt-0">
-  <!-- Google Map -->
-  <div id="map_canvas" 
-  data-latitude="{{ site.Params.map.map_latitude }}"
-  data-longitude="{{ site.Params.map.map_longitude }}" 
-  data-marker="{{ site.Params.map.map_marker | absURL }}"
-  data-marker-name="{{ site.Title }}"></div>
-</section>
-<!-- /gmap -->
 
 {{ end }}
